Chore: Replace `Collections.emptyList` with `List.of` and remove unused imports in tokenizer classes