@@ -62,7 +62,7 @@ public final class TokenizerByWord implements TextTokenizer {
   @Override
   public List<TextToken> tokenize(CharSequence text) {
     Objects.requireNonNull(text, "Character sequence is null");
-    if (text.length() == 0) return Collections.emptyList();
+    if (text.length() == 0) return List.of();
     List<TextToken> tokens = new ArrayList<>(text.length());
 
     Pattern p = Pattern.compile("\\s+");
